# RESerch_MON

./: .env.docker.example  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  Caddyfile  Caddyfile.production  DEVELOPMENT_PLAN.md  DEVPLAN_PAPER_VERSIONING.md  DEVPLAN_PEER_REVIEW_ROUNDS.md  PROGRESS.md  README.md  docker-compose.production.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: analytics.py  app_settings.py  auth.py  bibliography.py  comparison.py  discovery.py  exports.py  labels.py  network.py  paper_analysis.py  paper_quality.py  paper_references.py  papers.py  peer_review.py  reports.py  review_journal.py  router.py  scheduled_jobs.py  smart_search.py  sources.py  submission_rounds.py  topics.py  user_notes.py  venue_key_dates.py  zotero.py
backend/app/clients/: arxiv.py  base.py  biorxiv.py  crossref.py  elsevier.py  ieee.py  iris_who.py  pubmed.py  semantic_scholar.py  who_web.py  zotero.py
backend/app/models/: __init__.py  analysis.py  app_setting.py  job_run.py  label.py  paper.py  paper_quality_review.py  paper_reference.py  peer_review.py  peer_review_log.py  review_journal.py  scheduled_job.py  structured_analysis.py  submission_round.py  topic.py  (+3 more)
backend/scripts/: cleanup_zotero_quick_deep.py  enrich_compendium_dois.py  enrich_keyword_categories.py  extract_keywords.py  fetch_papers.py  fix_eu_imported_docs.py  generate_registry.py  merge_zotero_duplicate_collections.py  seed_compendium_papers.py  validate_papers.py
(+165 files in other folders)
